--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//WebContent/css/fricore.css=UTF-8
 encoding//WebContent/data/actions.json=UTF-8
 encoding//WebContent/data/replies.json=UTF-8
 encoding//WebContent/data/states.json=UTF-8
@@ -6,3 +7,4 @@ encoding//WebContent/sys=UTF-8
 encoding//WebContent/sys/actions.json=UTF-8
 encoding//WebContent/sys/replies.json=UTF-8
 encoding/<project>=UTF-8
+encoding/src=UTF-8
