--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,11 @@
       </plugin>
       <plugin>
         <artifactId>maven-war-plugin</artifactId>
-        <version>3.0.0</version>
+        <!--<version>3.0.0</version>-->
+        <version>3.3.1</version>
         <configuration>
           <warSourceDirectory>WebContent</warSourceDirectory>
+        	 <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
       </plugin>
     </plugins>
@@ -52,7 +54,7 @@
 		<groupId>com.fasterxml.jackson.core</groupId>
 		<artifactId>jackson-core</artifactId>
 		<version>2.12.2</version>
-	</dependency>
+ 	</dependency>
 	<dependency>
 		<groupId>com.fasterxml.jackson.core</groupId>
 		<artifactId>jackson-annotations</artifactId>
@@ -80,12 +82,12 @@
   		<groupId>org.glassfish.jersey.bundles</groupId>
   		<artifactId>jaxrs-ri</artifactId>
   		<version>2.24</version>
-  	</dependency>
+	</dependency>
   	  	<dependency>
   		<groupId>org.glassfish.jersey.media</groupId>
   		<artifactId>jersey-media-json-jackson</artifactId>
   		<version>2.24</version>
-  	</dependency>
+  	  	</dependency>
 	
 
 
@@ -114,11 +116,13 @@
   		<artifactId>javax.activation-api</artifactId>
   		<version>1.2.0</version>
   	</dependency>
-  	<dependency>
+  	
+  	<!-- <dependency>
   		<groupId>log4j</groupId>
   		<artifactId>log4j</artifactId>
   		<version>1.2.17</version>
-  	</dependency>
+  	</dependency>-->
+  	
   	<dependency>
   		<groupId>javax.servlet</groupId>
   		<artifactId>javax.servlet-api</artifactId>
