--- a/src/commons-logging.properties
+++ b/src/commons-logging.properties
@@ -1,1 +1,1 @@
-org.apache.commons.logging.log=org.apache.commons.logging.impl.Log4JLogger
+#org.apache.commons.logging.log=org.apache.commons.logging.impl.Log4JLogger
